syntax = "proto3";

package fluid.v1;

option go_package = "github.com/aspectrr/fluid.sh/proto/gen/go/fluid/v1;fluidv1";

// CreateSandboxCommand instructs a sandbox host to create a new microVM sandbox.
message CreateSandboxCommand {
  // sandbox_id is assigned by the control plane.
  string sandbox_id = 1;

  // base_image is the QCOW2 base image filename to use as backing file.
  string base_image = 2;

  // name is the human-readable sandbox name.
  string name = 3;

  // vcpus is the number of virtual CPUs to allocate.
  int32 vcpus = 4;

  // memory_mb is the amount of memory in megabytes.
  int32 memory_mb = 5;

  // ttl_seconds is the time-to-live before automatic cleanup. 0 = no TTL.
  int32 ttl_seconds = 6;

  // agent_id identifies the agent that requested this sandbox.
  string agent_id = 7;

  // network optionally overrides bridge selection. If empty, the host
  // resolves the bridge from the source VM's network or default.
  string network = 8;

  // source_vm is the source VM name used for network resolution.
  string source_vm = 9;

  // ssh_public_key is injected into the sandbox for SSH access.
  string ssh_public_key = 10;
}

// SandboxCreated is sent by the host after successfully creating a sandbox.
message SandboxCreated {
  string sandbox_id = 1;
  string name = 2;
  string state = 3;
  string ip_address = 4;
  string mac_address = 5;
  string bridge = 6;
  int32 pid = 7;
}

// DestroySandboxCommand instructs the host to destroy a sandbox.
message DestroySandboxCommand {
  string sandbox_id = 1;
}

// SandboxDestroyed confirms a sandbox has been destroyed.
message SandboxDestroyed {
  string sandbox_id = 1;
}

// StartSandboxCommand instructs the host to start a stopped sandbox.
message StartSandboxCommand {
  string sandbox_id = 1;
}

// SandboxStarted confirms a sandbox has been started.
message SandboxStarted {
  string sandbox_id = 1;
  string state = 2;
  string ip_address = 3;
}

// StopSandboxCommand instructs the host to stop a running sandbox.
message StopSandboxCommand {
  string sandbox_id = 1;
  bool force = 2;
}

// SandboxStopped confirms a sandbox has been stopped.
message SandboxStopped {
  string sandbox_id = 1;
  string state = 2;
}

// SandboxStateChanged reports any sandbox state transition.
message SandboxStateChanged {
  string sandbox_id = 1;
  string previous_state = 2;
  string new_state = 3;
  string reason = 4;
}

// RunCommandCommand instructs the host to execute a command in a sandbox via SSH.
message RunCommandCommand {
  string sandbox_id = 1;
  string command = 2;
  int32 timeout_seconds = 3;
  map<string, string> env = 4;
}

// CommandResult returns the output of a command execution.
message CommandResult {
  string sandbox_id = 1;
  string stdout = 2;
  string stderr = 3;
  int32 exit_code = 4;
  int64 duration_ms = 5;
}

// SnapshotCommand instructs the host to snapshot a sandbox.
message SnapshotCommand {
  string sandbox_id = 1;
  string snapshot_name = 2;
}

// SnapshotCreated confirms a snapshot was taken.
message SnapshotCreated {
  string sandbox_id = 1;
  string snapshot_id = 2;
  string snapshot_name = 3;
}
