syntax = "proto3";

package fluid.v1;

option go_package = "github.com/aspectrr/fluid.sh/proto/gen/go/fluid/v1;fluidv1";

// PrepareSourceVMCommand instructs the host to prepare a source VM for
// read-only access (install restricted shell, create fluid-readonly user, etc.).
message PrepareSourceVMCommand {
  string source_vm = 1;
  string ssh_user = 2;
  string ssh_key_path = 3;
}

// SourceVMPrepared reports the result of preparing a source VM.
message SourceVMPrepared {
  string source_vm = 1;
  string ip_address = 2;
  bool prepared = 3;
  bool user_created = 4;
  bool shell_installed = 5;
  bool ca_key_installed = 6;
  bool sshd_configured = 7;
  bool principals_created = 8;
  bool sshd_restarted = 9;
}

// RunSourceCommandCommand instructs the host to run a read-only command
// on a source VM via the fluid-readonly user.
message RunSourceCommandCommand {
  string source_vm = 1;
  string command = 2;
  int32 timeout_seconds = 3;
}

// SourceCommandResult returns the output of a source VM command.
message SourceCommandResult {
  string source_vm = 1;
  int32 exit_code = 2;
  string stdout = 3;
  string stderr = 4;
}

// ReadSourceFileCommand instructs the host to read a file from a source VM.
message ReadSourceFileCommand {
  string source_vm = 1;
  string path = 2;
}

// SourceFileResult returns the content of a file from a source VM.
message SourceFileResult {
  string source_vm = 1;
  string path = 2;
  string content = 3;
}

// ListSourceVMsCommand instructs the host to list available source VMs.
message ListSourceVMsCommand {}

// SourceVMsList returns the list of source VMs on a host.
message SourceVMsList {
  repeated SourceVMListEntry vms = 1;
}

message SourceVMListEntry {
  string name = 1;
  string state = 2;
  string ip_address = 3;
  bool prepared = 4;
}

// ValidateSourceVMCommand instructs the host to validate a source VM's
// readiness for read-only access.
message ValidateSourceVMCommand {
  string source_vm = 1;
}

// SourceVMValidation returns the validation result for a source VM.
message SourceVMValidation {
  string source_vm = 1;
  bool valid = 2;
  string state = 3;
  string mac_address = 4;
  string ip_address = 5;
  bool has_network = 6;
  repeated string warnings = 7;
  repeated string errors = 8;
}
